@@ -2001,24 +2001,15 @@ public class MRCompiler extends PhyPlanVisitor {
                 PhysicalOperator leaf = mpLeaves.get(0);
                 if ( !curMROp.isMapDone() && !curMROp.isRankOperation() )
                 {
-                    curMROp.setIsCounterOperation(true);
-                    curMROp.setIsRowNumber(true);
-                    curMROp.setOperationID(op.getOperationID());
                     curMROp.mapPlan.addAsLeaf(op);
                 } else {
                     FileSpec fSpec = getTempFileSpec();
                     MapReduceOper prevMROper = endSingleInputPlanWithStr(fSpec);
                     MapReduceOper mrCounter = startNew(fSpec, prevMROper);
                     mrCounter.mapPlan.addAsLeaf(op);
-                    mrCounter.setIsCounterOperation(true);
-                    mrCounter.setIsRowNumber(true);
-                    mrCounter.setOperationID(op.getOperationID());
                     curMROp = mrCounter;
                 }
             } else {
-                curMROp.setIsCounterOperation(true);
-                curMROp.setIsRowNumber(false);
-                curMROp.setOperationID(op.getOperationID());
                 curMROp.reducePlan.addAsLeaf(op);
             }
 
@@ -2041,7 +2032,6 @@ public class MRCompiler extends PhyPlanVisitor {
             MapReduceOper prevMROper = endSingleInputPlanWithStr(fSpec);
 
             curMROp = startNew(fSpec, prevMROper);
-            curMROp.setOperationID(op.getOperationID());
             curMROp.mapPlan.addAsLeaf(op);
 
             phyToMROpMap.put(op, curMROp);
