@@ -5170,7 +5170,23 @@ store a into ':OUTPATH:';\,
 									C = order B by rownumber;
 									store C into ':OUTPATH:';
 								\,
-            }
+            		}, {
+						'num' => 11,
+						'execonly' => 'mapred',
+						'pig' => q\
+									A = LOAD ':INPATH:/singlefile/prerank' using PigStorage(',') as (rownumber:long,rankcabd:long,rankbdaa:long,rankbdca:long,rankaacd:long,rankaaba:long,a:int,b:int,c:int,tail:bytearray);
+									split A into M if rownumber > 15, N if rownumber < 25;
+									C = rank N;
+									D = foreach C generate $0, a, b, c;
+									store D into ':OUTPATH:';
+								\,
+						'verify_pig_script' => q\
+									A = LOAD ':INPATH:/singlefile/prerank' using PigStorage(',') as (rownumber:long,rankcabd:long,rankbdaa:long,rankbdca:long,rankaacd:long,rankaaba:long,a:int,b:int,c:int,tail:bytearray);
+									B = filter A by rownumber < 25;
+									D = foreach B generate rownumber, a, b, c;
+									store D into ':OUTPATH:';
+								\,
+                    }
                 ]
             }
         ],
