@@ -30,6 +30,8 @@ PIG-2769: a simple logic causes very long compiling time on pig 0.10.0 (njw45 vi
 
 BUG FIXES
 
+PIG-3329: RANK operator failed when working with SPLIT (xalan via cheolsoo)
+
 PIG-3345: Handle null in DateTime functions (rohini)
 
 PIG-3315: Automaton dependency missing from Pig 11.1-h2 POM. (stevel@apache.org via daijy)
